// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post resolver should get a list of posts 1`] = `
Array [
  Object {
    "author": 1,
    "createdAt": "2018-10-10T13:00:00",
    "editedAt": "2018-10-10T13:00:00",
    "id": 1,
    "message": "Some message",
  },
  Object {
    "author": 1,
    "createdAt": "2018-10-10T13:00:00",
    "editedAt": "2018-10-10T13:00:00",
    "id": 2,
    "message": "Some message",
  },
  Object {
    "author": 1,
    "createdAt": "2018-10-10T13:00:00",
    "editedAt": "2018-10-10T13:00:00",
    "id": 3,
    "message": "Some message",
  },
  Object {
    "author": 3,
    "createdAt": "2018-10-10T13:00:00",
    "editedAt": "2018-10-10T13:00:00",
    "id": 4,
    "message": "Some message",
  },
  Object {
    "author": 3,
    "createdAt": "2018-10-10T13:00:00",
    "editedAt": "2018-10-10T13:00:00",
    "id": 5,
    "message": "Some message",
  },
]
`;

exports[`post resolver should get a specific post 1`] = `
Object {
  "author": 3,
  "createdAt": "2018-10-10T13:00:00",
  "editedAt": "2018-10-10T13:00:00",
  "id": 4,
  "message": "Some message",
}
`;
